# miniRedis

./: .pre-commit-config.yaml  Dockerfile  kvstore_pb2.py  kvstore_pb2_grpc.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: deploy.yaml
