[project]
name = "events-aggregator"
version = "0.1.0"
description = "events aggretor service"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "pre-commit", "pytest"]



[tool.ruff]
line-length = 79
extend-exclude = [
    ".venv",
    "tests",
    "__pycache__",
    "migrations",
    "build",
    "dist",
    ".idea",
    ".vscode",
    ".git",
]


[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E203", "E266",]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"*/migrations/*" = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
